[package]
name = "untitled-roguelike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rltk = { version = "0.8.1", features = ["serde"] }
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
lazy_static = "1.4.0"
regex = "1.5.5"
