[package]
name = "untitled-roguelike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/VikingosTeam/bracket-lib", branch = "main", features = ["serde"] }
specs = { version = "0.20", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.217", features = ["derive"] }
serde_json = "^1.0.138"
lazy_static = "1.4.0"
regex = "1.5.5"
